@@ -68,6 +68,8 @@ private slots:
 
 private:
 
+	static const int DEFAULT_TEA_TIME = 3*60;
+
 	struct tea_struct {
 		QString name;
 		int time;
