@@ -1,5 +1,7 @@
 2003-04-17  Martin Willers <willers@xm-arts.de>
 	- fixed bug with propagation of valueChanged() signals from TimeEdit
+	- fixed bug: removing all teas from list was leading to crash!
+	- changed default tea time of "anonymous" dialog to 3 minutes
 
 2003-04-10  Martin Willers <willers@xm-arts.de>
 	- have now proper wrapping time-edit widget
